Ensure text remains visible during webfont load

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -3,7 +3,6 @@
   font-style: normal;
   font-weight: 400;
   src: url('../assets/fonts/lineto-circular-pro-book.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face {
@@ -11,5 +10,4 @@
   font-style: normal;
   font-weight: 400;
   src: url('../assets/fonts/lineto-circular-pro-bold.woff') format('woff');
-  font-display: swap;
 }
